kubernetes/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connexxion-app
  namespace: connexxion
  labels:
    app: connexxion-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: connexxion-app
  template:
    metadata:
      labels:
        app: connexxion-app
    spec:
      containers:
        - name: connexxion-app
          image: veecode34/connexxion-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
