kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connexxion-app
  namespace: connexxion
  labels:
    app: connexxion-app
spec:
  type: ClusterIP
  selector:
    app: connexxion-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
